--- a/client/BoatSweetBoat/src/pages/Home/Home.scss
+++ b/client/BoatSweetBoat/src/pages/Home/Home.scss
@@ -66,17 +66,15 @@
 }
 
 .about-row {
-    width: 100vw;
-    height: 100vh;
+    width: 100%;
+    height: 100%;
 }
 
 .about-image {
     background-position: center;
     background-size: cover;
-}
-
-.about-text-container {
-    width: 100vw;
+    width: 100%;
+    height: 100%;
 }
 
 .about-title {
@@ -104,7 +102,6 @@
     height: 100vh;
     overflow: hidden;
 }
-
 .esplora-img-container {
     width: 100vw;
     height: 100vh;
@@ -115,14 +112,13 @@
     background-position: center;
     background-size: cover;
 }
-.esplora-grid {
-    position: absolute;
-    left: 0;
-    top: 0;
-    display: grid;
-    width: 100vw;
-    height: 85vh;
-    grid-template: 2fr 1fr 4fr / 2fr 1fr;
+.esplora-row {
+    width: 100%;
+    height: 100%;
+    z-index: 5;
+}
+.esplora-col {
+    z-index: 5;
 }
 .esplora-title {
     font-family: 'Playfair Display', serif;
@@ -158,6 +154,9 @@
     border-width: 2px;
     border-color: $white;
     border-style: solid;
+}
+.form-button:hover {
+    background-color: $acqua !important;
 }
 
 .sponsor-title {
@@ -216,4 +215,13 @@
 #contattami {
     height: min-content;
     width: 100%;
+}
+
+.form-control {
+    font-family: 'Playfair Display', serif;
+}
+
+.form-label {
+    color: $white !important;
+    font-family: 'Playfair Display', serif;
 }
